--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="book1">
                 <h2>Looking for Alaska </h2>
                 <br>
-                <h3>by John Green</h3>
+                <h3>by John Williams</h3>
             </div>
 
             <div class="book2">
