--- a/index.html
+++ b/index.html
@@ -49,25 +49,28 @@
             <img src="images/1.png" alt="photo1">
         </div>
     </section>
-
-    <div class="books">
+    <div class="cards">
         <h1>Recommended Books</h1>
-        <div class="cards">
-            <div class="book1">
-                <h2>Looking for Alaska </h2>
-                <br>
-                <h3>by John Williams</h3>
-            </div>
-
-            <div class="book2">
-                <h2>Looking for Alaska </h2>
-            </div>
-
-            <div class="book3">
-                <h2>Looking for Alaska</h2>
-            </div>
+        <div class="love">
+            <a href="#">
+                <div class="card1">
+                    Looking <br> for <br> Alaska <br><br>
+                    <p>by <br> John Green</p>
+                </div>
+            </a>
+            <a href="#">
+                <div class="card2">
+                    The <br> Little <br> Prince <br><br>
+                    <p>by <br> asdfghjkl</p>
+                </div>
+            </a>
+            <a href="#">
+                <div class="card3">
+                    <br> Stoner <br><br>
+                    <p>by <br> John Williams</p>
+                </div>
+            </a>
         </div>
     </div>
-
 </body>
 </html>
