--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <a href="#"><i class="fa fa-facebook"></i></a>
                 <a href="#"><i class="fa fa-twitter"></i></a>
                 <a href="#"><i class="fa fa-instagram"></i></a>
-                <a href="#"><i class="fa fa-youtube"></i></a>
+                <a href="#"><i class="fa fa-youtube-play"></i></a>
                 <a href="#"><i class="fa fa-tumblr"></i></a>
             </div>
         </div>
@@ -61,7 +61,7 @@
             <a href="#">
                 <div class="card2">
                     The <br> Little <br> Prince <br><br>
-                    <p>by <br> asdfghjkl</p>
+                    <p>by <br> Antoine de Saint-Exupéry</p>
                 </div>
             </a>
             <a href="#">
@@ -72,5 +72,31 @@
             </a>
         </div>
     </div>
+
+    <div class="youtube">
+        <i class="fa fa-youtube-play"> <strong> Youtube </strong> </i>
+        <div class="vid">
+            <div class="vid1">
+                <i class="fa fa-play"></i> <br><br>
+                <a href="#">build me up buttercup (cover)</a>
+            </div>
+            <div class="vid2">
+                <i class="fa fa-play"></i> <br><br>
+                <a href="#">weekly vlog #3</a>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <p>chanelhaseyo</p>
+        <p>&copy 2021 chanelhaseyo | All Rights Reserved | Privacy Policy</p>
+        <div class="social-footer">
+            <a href="#"><i class="fa fa-facebook"></i></a>
+            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="#"><i class="fa fa-instagram"></i></a>
+            <a href="#"><i class="fa fa-youtube-play"></i></a>
+            <a href="#"><i class="fa fa-tumblr"></i></a>
+        </div>
+    </footer>
 </body>
 </html>
