--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <header class="navbar">
         <img class="navbar__logo" src="images/logo.png" alt="logo">
+        
         <ul class="navbar__list navbar__list--active">
             <li><a href="index.html">Home</a></li>
             <li><a href="pages/blogs-def.html">Blogs</a></li>
@@ -18,6 +19,19 @@
             <li><a href="#">Contacts</a></li>
             <li><button>Subscribe</button></li>
         </ul>
+
+        <div class="hamIcon" onclick="toggleClass()"><i class="fa fa-bars"></i></div>
+
+        <!-- <div class="openMenu">
+            <ul class="openMenu__list">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="pages/blogs-def.html">Blogs</a></li>
+                <li><a href="#">Gallery</a></li>
+                <li><a href="#">Contacts</a></li>
+                <li><button>Subscribe</button></li>
+            </ul>
+        </div> -->
+
     </header>
 
     <section>
@@ -89,5 +103,8 @@
             <a href="#"><i class="fa fa-tumblr"></i></a>
         </div>
     </footer>
+
+    <script src="js/script.js"></script>
+
 </body>
 </html>
