--- a/index.html
+++ b/index.html
@@ -12,26 +12,26 @@
     <header class="navbar">
         <img class="navbar__logo" src="images/logo.png" alt="logo">
         
-        <ul class="navbar__list navbar__list--active">
+        <ul class="navbar__list">
             <li><a href="index.html">Home</a></li>
             <li><a href="pages/blogs-def.html">Blogs</a></li>
             <li><a href="#">Gallery</a></li>
             <li><a href="#">Contacts</a></li>
-            <li><button>Subscribe</button></li>
+            <li><button class="button">Subscribe</button></li>
         </ul>
 
-        <div class="hamIcon" onclick="toggleClass()"><i class="fa fa-bars"></i></div>
+        <button class="hamIcon"><i class="fa fa-bars"></i></button>
 
-        <!-- <div class="openMenu">
+        <div class="openMenu" id='openMenu'>
             <ul class="openMenu__list">
+                <li><button class="closeMenu"><i class="fa fa-times"></i></button></li>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="pages/blogs-def.html">Blogs</a></li>
                 <li><a href="#">Gallery</a></li>
                 <li><a href="#">Contacts</a></li>
-                <li><button>Subscribe</button></li>
+                <li><button class="button">Subscribe</button></li>
             </ul>
-        </div> -->
-
+        </div>
     </header>
 
     <section>
