socials flex-wrap

--- a/pages/blogs-def.html
+++ b/pages/blogs-def.html
@@ -11,14 +11,62 @@
 <body>
     <header class="navbar">
         <img class="navbar__logo" src="/images/logo.png" alt="logo">
-        <ul class="navbar__list navbar__list--active">
+        
+        <ul class="navbar__list">
             <li><a href="/index.html">Home</a></li>
-            <li><a href="pages/blogs-def.html">Blogs</a></li>
+            <li><a href="blogs-def.html">Blogs</a></li>
             <li><a href="#">Gallery</a></li>
             <li><a href="#">Contacts</a></li>
-            <li><button>Subscribe</button></li>
+            <li><button class="button">Subscribe</button></li>
         </ul>
+
+        <button class="hamIcon"><i class="fa fa-bars"></i></button>
+
+        <div class="openMenu" id='openMenu'>
+            <ul class="openMenu__list">
+                <li><button class="closeMenu"><i class="fa fa-times"></i></button></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="blogs-def.html">Blogs</a></li>
+                <li><a href="#">Gallery</a></li>
+                <li><a href="#">Contacts</a></li>
+                <li><button class="button">Subscribe</button></li>
+            </ul>
+        </div>
     </header>
 
+    <div class="blogs">
+        <div class="blogs__y2k">
+            <img class="blogs__image" src="" alt="">
+            <h2 class="blogs__title">Y2K Inspired Outfit</h2>
+            <p class="blogs__preview">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                Cupiditate velit ex deleniti voluptatibus accusamus voluptate ea ipsum. 
+                Et amet laboriosam reiciendis. Commodi laudantium nam voluptatem distinctio, 
+                expedita minima et libero.
+            </p>
+        </div>
+
+        <div class="blogs__y2k">
+            <img class="blogs__image" src="" alt="">
+            <h2 class="blogs__title">Y2K Inspired Outfit</h2>
+            <p class="blogs__preview">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                Cupiditate velit ex deleniti voluptatibus accusamus voluptate ea ipsum. 
+                Et amet laboriosam reiciendis. Commodi laudantium nam voluptatem distinctio, 
+                expedita minima et libero.
+            </p>
+        </div>
+
+        <div class="blogs__y2k">
+            <img class="blogs__image" src="" alt="">
+            <h2 class="blogs__title">Y2K Inspired Outfit</h2>
+            <p class="blogs__preview">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                Cupiditate velit ex deleniti voluptatibus accusamus voluptate ea ipsum. 
+                Et amet laboriosam reiciendis. Commodi laudantium nam voluptatem distinctio, 
+                expedita minima et libero.
+            </p>
+        </div>
+    </div>
 </body>
 </html>
