--- a/pages/blogs-def.html
+++ b/pages/blogs-def.html
@@ -34,39 +34,102 @@
         </div>
     </header>
 
+<!-- blogs section -->
     <div class="blogs">
-        <div class="blogs__y2k">
-            <img class="blogs__image" src="" alt="">
-            <h2 class="blogs__title">Y2K Inspired Outfit</h2>
-            <p class="blogs__preview">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                Cupiditate velit ex deleniti voluptatibus accusamus voluptate ea ipsum. 
-                Et amet laboriosam reiciendis. Commodi laudantium nam voluptatem distinctio, 
-                expedita minima et libero.
-            </p>
+        <div class="blogs__section">
+            <img class="blogs__image" src="/images/y2k.png" alt="y2k">
+            <div class="blogs__content">
+                <h2 class="blogs__content--title">Y2K Inspired Outfit</h2>
+                <p class="blogs__content--preview">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                    Cupiditate velit ex deleniti voluptatibus accusamus voluptate ea ipsum. 
+                    Et amet laboriosam reiciendis. Commodi laudantium nam voluptatem distinctio, 
+                    expedita minima et libero.
+                    <br><br>
+                    TOP
+                    <br> 
+                    Cropped tops, Cute baby tees, Cardigans, Sweater vest 
+                    <br><br>
+                    BOTTOM
+                    <br>
+                    Mom jeans or Boyfriend jeans, Corduroys, Low waisted
+                    pants or shorts, Mini skirts
+                    <br><br>
+                    BAGS
+                    <br>
+                    Shoulder bags
+                    <br><br>
+                </p>
+                <a class="blogs__content--link" href="blog1.html">Read more</a>
+            </div>
         </div>
 
-        <div class="blogs__y2k">
-            <img class="blogs__image" src="" alt="">
-            <h2 class="blogs__title">Y2K Inspired Outfit</h2>
-            <p class="blogs__preview">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                Cupiditate velit ex deleniti voluptatibus accusamus voluptate ea ipsum. 
-                Et amet laboriosam reiciendis. Commodi laudantium nam voluptatem distinctio, 
-                expedita minima et libero.
-            </p>
+        <div class="blogs__section">
+            <img class="blogs__image" src="/images/decor.png" alt="decor">
+            <div class="blogs__content">
+                <h2 class="blogs__content--title">Room Decor</h2>
+                <p class="blogs__content--preview">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                    Cupiditate velit ex deleniti voluptatibus accusamus voluptate ea ipsum. 
+                    Et amet laboriosam reiciendis. Commodi laudantium nam voluptatem distinctio, 
+                    expedita minima et libero.
+                    <br><br>
+                    Table 
+                    <br>
+                    <a href="#">www.lazada.com/table1</a>
+                    <br><br>
+                    Chair
+                    <br>
+                    <a href="#">www.lazada.com/table1</a>
+                    <br><br>
+                </p>
+                <a class="blogs__content--link" href="#">Read more</a>
+            </div>
         </div>
 
-        <div class="blogs__y2k">
-            <img class="blogs__image" src="" alt="">
-            <h2 class="blogs__title">Y2K Inspired Outfit</h2>
-            <p class="blogs__preview">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                Cupiditate velit ex deleniti voluptatibus accusamus voluptate ea ipsum. 
-                Et amet laboriosam reiciendis. Commodi laudantium nam voluptatem distinctio, 
-                expedita minima et libero.
-            </p>
+        <div class="blogs__section">
+            <img class="blogs__image" src="/images/coffeeshop.png" alt="coffeeshop">
+            <div class="blogs__content">
+                <h2 class="blogs__content--title">Coffee Shop Hopping</h2>
+                <p class="blogs__content--preview">
+                    Float Cafe 
+                    <br>
+                    San Joaquin, Maria Aurora, Aurora, Philippines
+                    <br><br>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                    Cupiditate velit ex deleniti voluptatibus accusamus voluptate ea ipsum. 
+                    Et amet laboriosam reiciendis. Commodi laudantium nam voluptatem distinctio, 
+                    expedita minima et libero. Lorem ipsum dolor sit amet consectetur, 
+                    adipisicing elit. Voluptatibus vel tenetur voluptate ipsam tempore nesciunt 
+                    molestias cum quasi, culpa eius labore animi exercitationem blanditiis omnis 
+                    quo ab dolorum magnam quam, aut voluptas inventore veritatis maxime quisquam 
+                    voluptatum. Modi quibusdam laborum similique quia quis eaque amet sapiente 
+                    temporibus? Earum, dolores odit?
+                    <br><br>
+                </p>
+                <a class="blogs__content--link" href="#">Read more</a>
+            </div>
+        </div>
+
+        <div class="blogs__pages">
+            <a href="#">1</a>
+            <a href="#">2</a>
+            <a href="#">3</a>
+            <a href="#"><i class="fa fa-arrow-right"></i></a>
         </div>
     </div>
+
+    <footer class="footer">
+        <p class="footer__copy">&copy 2021 chanelhaseyo | All Rights Reserved | Privacy Policy</p>
+        <div class="footer__socials">
+            <a href="#"><i class="fa fa-facebook"></i></a>
+            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="#"><i class="fa fa-instagram"></i></a>
+            <a href="#"><i class="fa fa-youtube-play"></i></a>
+            <a href="#"><i class="fa fa-tumblr"></i></a>
+        </div>
+    </footer>
+
+    <script src="/js/script.js"></script>
 </body>
 </html>
