--- a/pages/blog1.html
+++ b/pages/blog1.html
@@ -15,7 +15,7 @@
         <ul class="navbar__list">
             <li><a href="/index.html">Home</a></li>
             <li><a href="blogs-def.html">Blogs</a></li>
-            <li><a href="#">Gallery</a></li>
+            <li><a href="gallery-def.html">Gallery</a></li>
             <li><a href="#">Contacts</a></li>
             <li><button class="button">Subscribe</button></li>
         </ul>
@@ -27,7 +27,7 @@
                 <li><button class="closeMenu"><i class="fa fa-times"></i></button></li>
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="blogs-def.html">Blogs</a></li>
-                <li><a href="#">Gallery</a></li>
+                <li><a href="gallery-def.html">Gallery</a></li>
                 <li><a href="#">Contacts</a></li>
                 <li><button class="button">Subscribe</button></li>
             </ul>
@@ -40,9 +40,9 @@
             <img src="/images/y2k2.png" alt="y2k2">
             <img src="/images/y2k3.png" alt="y2k3">
         </div>
-        <div class="y2k__content">
-            <h2 class="y2k__content--title">Y2K Inspired Outfits</h2>
-            <p class="y2k__content--para">
+        <div class="blogs__content">
+            <h2 class="blogs__content--title">Y2K Inspired Outfits</h2>
+            <p class="blogs__content--preview">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                 Cupiditate velit ex deleniti voluptatibus accusamus voluptate ea ipsum. 
                 Et amet laboriosam reiciendis. Commodi laudantium nam voluptatem distinctio, 
@@ -81,8 +81,20 @@
                 
             </p>
         </div>
-
     </div>
 
+    <footer class="footer">
+        <p class="footer__copy">&copy 2021 chanelhaseyo | All Rights Reserved | Privacy Policy</p>
+        <div class="footer__socials">
+            <a href="#"><i class="fa fa-facebook"></i></a>
+            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="#"><i class="fa fa-instagram"></i></a>
+            <a href="#"><i class="fa fa-youtube-play"></i></a>
+            <a href="#"><i class="fa fa-tumblr"></i></a>
+        </div>
+    </footer>
+
+    <script src="/js/script.js"></script>
+    
 </body>
 </html>
