--- a/pages/blogs-def.html
+++ b/pages/blogs-def.html
@@ -15,7 +15,7 @@
         <ul class="navbar__list">
             <li><a href="/index.html">Home</a></li>
             <li><a href="blogs-def.html">Blogs</a></li>
-            <li><a href="#">Gallery</a></li>
+            <li><a href="gallery-def.html">Gallery</a></li>
             <li><a href="#">Contacts</a></li>
             <li><button class="button">Subscribe</button></li>
         </ul>
@@ -27,7 +27,7 @@
                 <li><button class="closeMenu"><i class="fa fa-times"></i></button></li>
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="blogs-def.html">Blogs</a></li>
-                <li><a href="#">Gallery</a></li>
+                <li><a href="gallery-def.html">Gallery</a></li>
                 <li><a href="#">Contacts</a></li>
                 <li><button class="button">Subscribe</button></li>
             </ul>
