--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="pages/blogs-def.html">Blogs</a></li>
             <li><a href="pages/gallery-def.html">Gallery</a></li>
-            <li><a href="#">Contacts</a></li>
+            <li><a href="pages/contact.html">Contacts</a></li>
             <li><button class="button">Subscribe</button></li>
         </ul>
 
@@ -28,7 +28,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="pages/blogs-def.html">Blogs</a></li>
                 <li><a href="pages/gallery-def.html">Gallery</a></li>
-                <li><a href="#">Contacts</a></li>
+                <li><a href="pages/contact.html">Contacts</a></li>
                 <li><button class="button">Subscribe</button></li>
             </ul>
         </div>
