--- a/pages/blogs-def.html
+++ b/pages/blogs-def.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style-bem.css">
+    <link rel="stylesheet" href="../css/style-bem.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Blogs</title>
 </head>
 <body>
     <header class="navbar">
-        <img class="navbar__logo" src="/images/logo.png" alt="logo">
+        <img class="navbar__logo" src="../images/logo.png" alt="logo">
         
         <ul class="navbar__list">
-            <li><a href="/index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="blogs-def.html">Blogs</a></li>
             <li><a href="gallery-def.html">Gallery</a></li>
-            <li><a href="#">Contacts</a></li>
+            <li><a href="contact.html">Contacts</a></li>
             <li><button class="button">Subscribe</button></li>
         </ul>
 
@@ -25,10 +25,10 @@
         <div class="openMenu" id='openMenu'>
             <ul class="openMenu__list">
                 <li><button class="closeMenu"><i class="fa fa-times"></i></button></li>
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="blogs-def.html">Blogs</a></li>
                 <li><a href="gallery-def.html">Gallery</a></li>
-                <li><a href="#">Contacts</a></li>
+                <li><a href="contact.html">Contacts</a></li>
                 <li><button class="button">Subscribe</button></li>
             </ul>
         </div>
@@ -37,7 +37,7 @@
 <!-- blogs section -->
     <div class="blogs">
         <div class="blogs__section">
-            <img class="blogs__image" src="/images/y2k.png" alt="y2k">
+            <img class="blogs__image" src="../images/y2k.png" alt="y2k">
             <div class="blogs__content">
                 <h2 class="blogs__content--title">Y2K Inspired Outfit</h2>
                 <p class="blogs__content--preview">
@@ -65,7 +65,7 @@
         </div>
 
         <div class="blogs__section">
-            <img class="blogs__image" src="/images/decor.png" alt="decor">
+            <img class="blogs__image" src="../images/decor.png" alt="decor">
             <div class="blogs__content">
                 <h2 class="blogs__content--title">Room Decor</h2>
                 <p class="blogs__content--preview">
@@ -88,7 +88,7 @@
         </div>
 
         <div class="blogs__section">
-            <img class="blogs__image" src="/images/coffeeshop.png" alt="coffeeshop">
+            <img class="blogs__image" src="../images/coffeeshop.png" alt="coffeeshop">
             <div class="blogs__content">
                 <h2 class="blogs__content--title">Coffee Shop Hopping</h2>
                 <p class="blogs__content--preview">
@@ -130,6 +130,6 @@
         </div>
     </footer>
 
-    <script src="/js/script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
