--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style-bem.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Gallery</title>
+    <title>Contacts</title>
 </head>
 <body>
     <header class="navbar">
@@ -34,24 +34,21 @@
         </div>
     </header>
 
-    <div class="gallery">
-        <h1 class="blogs__content--title">Gallery</h1>
-        <div class="gallery__banner">
-            <img src="../images/banner-gallery (1).png">
-            <img src="../images/banner-gallery (2).png">
+    <div class="contact">
+        <div class="contact__info">
+            <h1 class="contact__info--title">Email</h1>
+            <h1 class="contact__info--info">chanelhaseyo@gmail.com</h1>
+            <br><br>
+            <h1 class="contact__info--info">Follow me!</h1>
+            <div class="contact__info--socials">
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-instagram"></i></a>
+                <a href="#"><i class="fa fa-youtube-play"></i></a>
+                <a href="#"><i class="fa fa-tumblr"></i></a>
+            </div>
         </div>
-
-        <div class="gallery__slc">
-            <a href="#"><img src="../images/1.png"></a>
-            <a href="#"><img src="../images/2.png"></a>
-            <a href="#"><img src="../images/3.png"></a>
-            <a href="#"><img src="../images/4.png"></a>
-            <a href="#"><img src="../images/5.png"></a>
-            <a href="gallery-room.html"><img src="../images/6.png"></a>
-            <a href="#"><img src="../images/7.png"></a>
-            <a href="#"><img src="../images/8.png"></a>
-            <a href="#"><img src="../images/9.png"></a>
-        </div>
+            <img class="contact__logo" src="../images/logo-big.png" alt="logo">
     </div>
 
     <footer class="footer">
@@ -66,5 +63,6 @@
     </footer>
 
     <script src="../js/script.js"></script>
+
 </body>
 </html>
