--- a/pages/blog1.html
+++ b/pages/blog1.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style-bem.css">
+    <link rel="stylesheet" href="../css/style-bem.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Blog - Y2K Inspired Outfits</title>
 </head>
 <body>
     <header class="navbar">
-        <img class="navbar__logo" src="/images/logo.png" alt="logo">
+        <img class="navbar__logo" src="../images/logo.png" alt="logo">
         
         <ul class="navbar__list">
-            <li><a href="/index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="blogs-def.html">Blogs</a></li>
             <li><a href="gallery-def.html">Gallery</a></li>
-            <li><a href="#">Contacts</a></li>
+            <li><a href="contact.html">Contacts</a></li>
             <li><button class="button">Subscribe</button></li>
         </ul>
 
@@ -25,10 +25,10 @@
         <div class="openMenu" id='openMenu'>
             <ul class="openMenu__list">
                 <li><button class="closeMenu"><i class="fa fa-times"></i></button></li>
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="blogs-def.html">Blogs</a></li>
                 <li><a href="gallery-def.html">Gallery</a></li>
-                <li><a href="#">Contacts</a></li>
+                <li><a href="contact.html">Contacts</a></li>
                 <li><button class="button">Subscribe</button></li>
             </ul>
         </div>
@@ -36,9 +36,9 @@
 
     <div class="y2k">
         <div class="y2k__images">
-            <img src="/images/y2k.png" alt="y2k">
-            <img src="/images/y2k2.png" alt="y2k2">
-            <img src="/images/y2k3.png" alt="y2k3">
+            <img src="../images/y2k.png" alt="y2k">
+            <img src="../images/y2k2.png" alt="y2k2">
+            <img src="../images/y2k3.png" alt="y2k3">
         </div>
         <div class="blogs__content">
             <h2 class="blogs__content--title">Y2K Inspired Outfits</h2>
@@ -94,7 +94,7 @@
         </div>
     </footer>
 
-    <script src="/js/script.js"></script>
+    <script src="../js/script.js"></script>
     
 </body>
 </html>
