--- a/pages/gallery-room.html
+++ b/pages/gallery-room.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style-bem.css">
+    <link rel="stylesheet" href="../css/style-bem.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Gallery</title>
+    <title>Gallery - Room</title>
 </head>
 <body>
     <header class="navbar">
-        <img class="navbar__logo" src="/images/logo.png" alt="logo">
+        <img class="navbar__logo" src="../images/logo.png" alt="logo">
         
         <ul class="navbar__list">
-            <li><a href="/index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="blogs-def.html">Blogs</a></li>
             <li><a href="gallery-def.html">Gallery</a></li>
-            <li><a href="#">Contacts</a></li>
+            <li><a href="contact.html">Contacts</a></li>
             <li><button class="button">Subscribe</button></li>
         </ul>
 
@@ -25,10 +25,10 @@
         <div class="openMenu" id='openMenu'>
             <ul class="openMenu__list">
                 <li><button class="closeMenu"><i class="fa fa-times"></i></button></li>
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="blogs-def.html">Blogs</a></li>
                 <li><a href="gallery-def.html">Gallery</a></li>
-                <li><a href="#">Contacts</a></li>
+                <li><a href="contact.html">Contacts</a></li>
                 <li><button class="button">Subscribe</button></li>
             </ul>
         </div>
@@ -37,26 +37,26 @@
     <div class="room">
         <h1 class="room__title">Room</h1>
         <div class="room__images">
-            <a href="#"><img src="/images/gallery (1).png"></a>
-            <a href="#"><img src="/images/gallery (2).png"></a>
-            <a href="#"><img src="/images/gallery (3).png"></a>
-            <a href="#"><img src="/images/gallery (8).png"></a>
-            <a href="#"><img src="/images/gallery (5).png"></a>
-            <a href="#"><img src="/images/gallery (6).png"></a>
-            <a href="#"><img src="/images/gallery (7).png"></a>
-            <a href="#"><img src="/images/gallery (4).png"></a>
-            <a href="#"><img src="/images/gallery (9).png"></a>
-            <a href="#"><img src="/images/gallery (10).png"></a>
-            <a href="#"><img src="/images/gallery (11).png"></a>
-            <a href="#"><img src="/images/gallery (12).png"></a>
-            <a href="#"><img src="/images/gallery (13).png"></a>
-            <a href="#"><img src="/images/gallery (14).png"></a>
-            <a href="#"><img src="/images/gallery (15).png"></a>
-            <a href="#"><img src="/images/gallery (16).png"></a>
-            <a href="#"><img src="/images/gallery (17).png"></a>
-            <a href="#"><img src="/images/gallery (18).png"></a>
-            <a href="#"><img src="/images/gallery (19).png"></a>
-            <a href="#"><img src="/images/gallery (20).png"></a>
+            <a href="#"><img src="../images/gallery (1).png"></a>
+            <a href="#"><img src="../images/gallery (2).png"></a>
+            <a href="#"><img src="../images/gallery (3).png"></a>
+            <a href="#"><img src="../images/gallery (8).png"></a>
+            <a href="#"><img src="../images/gallery (5).png"></a>
+            <a href="#"><img src="../images/gallery (6).png"></a>
+            <a href="#"><img src="../images/gallery (7).png"></a>
+            <a href="#"><img src="../images/gallery (4).png"></a>
+            <a href="#"><img src="../images/gallery (9).png"></a>
+            <a href="#"><img src="../images/gallery (10).png"></a>
+            <a href="#"><img src="../images/gallery (11).png"></a>
+            <a href="#"><img src="../images/gallery (12).png"></a>
+            <a href="#"><img src="../images/gallery (13).png"></a>
+            <a href="#"><img src="../images/gallery (14).png"></a>
+            <a href="#"><img src="../images/gallery (15).png"></a>
+            <a href="#"><img src="../images/gallery (16).png"></a>
+            <a href="#"><img src="../images/gallery (17).png"></a>
+            <a href="#"><img src="../images/gallery (18).png"></a>
+            <a href="#"><img src="../images/gallery (19).png"></a>
+            <a href="#"><img src="../images/gallery (20).png"></a>
         </div>
     </div>
 
@@ -71,6 +71,6 @@
         </div>
     </footer>
 
-    <script src="/js/script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
