links and sample pages

--- a/pages/blog1.html
+++ b/pages/blog1.html
@@ -36,9 +36,9 @@
 
     <div class="y2k">
         <div class="y2k__images">
-            <img src="../images/y2k.png" alt="y2k">
-            <img src="../images/y2k2.png" alt="y2k2">
-            <img src="../images/y2k3.png" alt="y2k3">
+            <img src="../images/blog/y2k.png" alt="y2k">
+            <img src="../images/blog/y2k2.png" alt="y2k2">
+            <img src="../images/blog/y2k3.png" alt="y2k3">
         </div>
         <div class="blogs__content">
             <h2 class="blogs__content--title">Y2K Inspired Outfits</h2>
@@ -86,11 +86,11 @@
     <footer class="footer">
         <p class="footer__copy">&copy 2021 chanelhaseyo | All Rights Reserved | Privacy Policy</p>
         <div class="footer__socials">
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-instagram"></i></a>
-            <a href="#"><i class="fa fa-youtube-play"></i></a>
-            <a href="#"><i class="fa fa-tumblr"></i></a>
+            <a href="https://www.facebook.com/jonnellesolomon"><i class="fa fa-facebook"></i></a>
+            <a href="https://twitter.com/jonnellesolomon"><i class="fa fa-twitter"></i></a>
+            <a href="https://www.instagram.com/chanelhaseyo"><i class="fa fa-instagram"></i></a>
+            <a href="https://www.youtube.com/channel/UCFqtAh0pLqQ2II-l0k48EsA"><i class="fa fa-youtube-play"></i></a>
+            <a href="https://www.tumblr.com/blog/chanelhaseyo"><i class="fa fa-tumblr"></i></a>
         </div>
     </footer>
 
