--- a/pages/blogs-def.html
+++ b/pages/blogs-def.html
@@ -37,7 +37,7 @@
 <!-- blogs section -->
     <div class="blogs">
         <div class="blogs__section">
-            <img class="blogs__image" src="../images/y2k.png" alt="y2k">
+            <img class="blogs__image" src="../images/blog/y2k.png" alt="y2k">
             <div class="blogs__content">
                 <h2 class="blogs__content--title">Y2K Inspired Outfit</h2>
                 <p class="blogs__content--preview">
@@ -65,7 +65,7 @@
         </div>
 
         <div class="blogs__section">
-            <img class="blogs__image" src="../images/decor.png" alt="decor">
+            <img class="blogs__image" src="../images/blog/decor.png" alt="decor">
             <div class="blogs__content">
                 <h2 class="blogs__content--title">Room Decor</h2>
                 <p class="blogs__content--preview">
@@ -83,12 +83,12 @@
                     <a href="#">www.lazada.com/table1</a>
                     <br><br>
                 </p>
-                <a class="blogs__content--link" href="#">Read more</a>
+                <a class="blogs__content--link" href="blog1.html">Read more</a>
             </div>
         </div>
 
         <div class="blogs__section">
-            <img class="blogs__image" src="../images/coffeeshop.png" alt="coffeeshop">
+            <img class="blogs__image" src="../images/blog/coffeeshop.png" alt="coffeeshop">
             <div class="blogs__content">
                 <h2 class="blogs__content--title">Coffee Shop Hopping</h2>
                 <p class="blogs__content--preview">
@@ -107,7 +107,7 @@
                     temporibus? Earum, dolores odit?
                     <br><br>
                 </p>
-                <a class="blogs__content--link" href="#">Read more</a>
+                <a class="blogs__content--link" href="blog1.html">Read more</a>
             </div>
         </div>
 
@@ -122,11 +122,11 @@
     <footer class="footer">
         <p class="footer__copy">&copy 2021 chanelhaseyo | All Rights Reserved | Privacy Policy</p>
         <div class="footer__socials">
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-instagram"></i></a>
-            <a href="#"><i class="fa fa-youtube-play"></i></a>
-            <a href="#"><i class="fa fa-tumblr"></i></a>
+            <a href="https://www.facebook.com/jonnellesolomon"><i class="fa fa-facebook"></i></a>
+            <a href="https://twitter.com/jonnellesolomon"><i class="fa fa-twitter"></i></a>
+            <a href="https://www.instagram.com/chanelhaseyo"><i class="fa fa-instagram"></i></a>
+            <a href="https://www.youtube.com/channel/UCFqtAh0pLqQ2II-l0k48EsA"><i class="fa fa-youtube-play"></i></a>
+            <a href="https://www.tumblr.com/blog/chanelhaseyo"><i class="fa fa-tumblr"></i></a>
         </div>
     </footer>
 
