--- a/pages/contact.html
+++ b/pages/contact.html
@@ -41,11 +41,11 @@
             <br><br>
             <h1 class="contact__info--info">Follow me!</h1>
             <div class="contact__info--socials">
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-instagram"></i></a>
-                <a href="#"><i class="fa fa-youtube-play"></i></a>
-                <a href="#"><i class="fa fa-tumblr"></i></a>
+                <a href="https://www.facebook.com/jonnellesolomon"><i class="fa fa-facebook"></i></a>
+                <a href="https://twitter.com/jonnellesolomon"><i class="fa fa-twitter"></i></a>
+                <a href="https://www.instagram.com/chanelhaseyo"><i class="fa fa-instagram"></i></a>
+                <a href="https://www.youtube.com/channel/UCFqtAh0pLqQ2II-l0k48EsA"><i class="fa fa-youtube-play"></i></a>
+                <a href="https://www.tumblr.com/blog/chanelhaseyo"><i class="fa fa-tumblr"></i></a>
             </div>
         </div>
             <img class="contact__logo" src="../images/logo-big.png" alt="logo">
@@ -54,11 +54,11 @@
     <footer class="footer">
         <p class="footer__copy">&copy 2021 chanelhaseyo | All Rights Reserved | Privacy Policy</p>
         <div class="footer__socials">
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-instagram"></i></a>
-            <a href="#"><i class="fa fa-youtube-play"></i></a>
-            <a href="#"><i class="fa fa-tumblr"></i></a>
+            <a href="https://www.facebook.com/jonnellesolomon"><i class="fa fa-facebook"></i></a>
+            <a href="https://twitter.com/jonnellesolomon"><i class="fa fa-twitter"></i></a>
+            <a href="https://www.instagram.com/chanelhaseyo"><i class="fa fa-instagram"></i></a>
+            <a href="https://www.youtube.com/channel/UCFqtAh0pLqQ2II-l0k48EsA"><i class="fa fa-youtube-play"></i></a>
+            <a href="https://www.tumblr.com/blog/chanelhaseyo"><i class="fa fa-tumblr"></i></a>
         </div>
     </footer>
 
