--- a/pages/gallery-def.html
+++ b/pages/gallery-def.html
@@ -37,31 +37,31 @@
     <div class="gallery">
         <h1 class="blogs__content--title">Gallery</h1>
         <div class="gallery__banner">
-            <img src="../images/banner-gallery (1).png">
-            <img src="../images/banner-gallery (2).png">
+            <img src="../images/gallery/banner-gallery (1).png">
+            <img src="../images/gallery/banner-gallery (2).png">
         </div>
 
         <div class="gallery__slc">
-            <a href="#"><img src="../images/1.png"></a>
-            <a href="#"><img src="../images/2.png"></a>
-            <a href="#"><img src="../images/3.png"></a>
-            <a href="#"><img src="../images/4.png"></a>
-            <a href="#"><img src="../images/5.png"></a>
-            <a href="gallery-room.html"><img src="../images/6.png"></a>
-            <a href="#"><img src="../images/7.png"></a>
-            <a href="#"><img src="../images/8.png"></a>
-            <a href="#"><img src="../images/9.png"></a>
+            <a href="gallery-room.html"><img src="../images/gallery/1.png"></a>
+            <a href="gallery-room.html"><img src="../images/gallery/2.png"></a>
+            <a href="gallery-room.html"><img src="../images/gallery/3.png"></a>
+            <a href="gallery-room.html"><img src="../images/gallery/4.png"></a>
+            <a href="gallery-room.html"><img src="../images/gallery/5.png"></a>
+            <a href="gallery-room.html"><img src="../images/gallery/6.png"></a>
+            <a href="gallery-room.html"><img src="../images/gallery/7.png"></a>
+            <a href="gallery-room.html"><img src="../images/gallery/8.png"></a>
+            <a href="gallery-room.html"><img src="../images/gallery/9.png"></a>
         </div>
     </div>
 
     <footer class="footer">
         <p class="footer__copy">&copy 2021 chanelhaseyo | All Rights Reserved | Privacy Policy</p>
         <div class="footer__socials">
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-instagram"></i></a>
-            <a href="#"><i class="fa fa-youtube-play"></i></a>
-            <a href="#"><i class="fa fa-tumblr"></i></a>
+            <a href="https://www.facebook.com/jonnellesolomon"><i class="fa fa-facebook"></i></a>
+            <a href="https://twitter.com/jonnellesolomon"><i class="fa fa-twitter"></i></a>
+            <a href="https://www.instagram.com/chanelhaseyo"><i class="fa fa-instagram"></i></a>
+            <a href="https://www.youtube.com/channel/UCFqtAh0pLqQ2II-l0k48EsA"><i class="fa fa-youtube-play"></i></a>
+            <a href="https://www.tumblr.com/blog/chanelhaseyo"><i class="fa fa-tumblr"></i></a>
         </div>
     </footer>
 
