--- a/pages/gallery-room.html
+++ b/pages/gallery-room.html
@@ -37,37 +37,37 @@
     <div class="room">
         <h1 class="room__title">Room</h1>
         <div class="room__images">
-            <a href="#"><img src="../images/gallery (1).png"></a>
-            <a href="#"><img src="../images/gallery (2).png"></a>
-            <a href="#"><img src="../images/gallery (3).png"></a>
-            <a href="#"><img src="../images/gallery (8).png"></a>
-            <a href="#"><img src="../images/gallery (5).png"></a>
-            <a href="#"><img src="../images/gallery (6).png"></a>
-            <a href="#"><img src="../images/gallery (7).png"></a>
-            <a href="#"><img src="../images/gallery (4).png"></a>
-            <a href="#"><img src="../images/gallery (9).png"></a>
-            <a href="#"><img src="../images/gallery (10).png"></a>
-            <a href="#"><img src="../images/gallery (11).png"></a>
-            <a href="#"><img src="../images/gallery (12).png"></a>
-            <a href="#"><img src="../images/gallery (13).png"></a>
-            <a href="#"><img src="../images/gallery (14).png"></a>
-            <a href="#"><img src="../images/gallery (15).png"></a>
-            <a href="#"><img src="../images/gallery (16).png"></a>
-            <a href="#"><img src="../images/gallery (17).png"></a>
-            <a href="#"><img src="../images/gallery (18).png"></a>
-            <a href="#"><img src="../images/gallery (19).png"></a>
-            <a href="#"><img src="../images/gallery (20).png"></a>
+            <img src="../images/gallery/gallery (1).png">
+            <img src="../images/gallery/gallery (2).png">
+            <img src="../images/gallery/gallery (3).png">
+            <img src="../images/gallery/gallery (8).png">
+            <img src="../images/gallery/gallery (5).png">
+            <img src="../images/gallery/gallery (6).png">
+            <img src="../images/gallery/gallery (7).png">
+            <img src="../images/gallery/gallery (4).png">
+            <img src="../images/gallery/gallery (9).png">
+            <img src="../images/gallery/gallery (10).png">
+            <img src="../images/gallery/gallery (11).png">
+            <img src="../images/gallery/gallery (12).png">
+            <img src="../images/gallery/gallery (13).png">
+            <img src="../images/gallery/gallery (14).png">
+            <img src="../images/gallery/gallery (15).png">
+            <img src="../images/gallery/gallery (16).png">
+            <img src="../images/gallery/gallery (17).png">
+            <img src="../images/gallery/gallery (18).png">
+            <img src="../images/gallery/gallery (19).png">
+            <img src="../images/gallery/gallery (20).png">
         </div>
     </div>
 
     <footer class="footer">
         <p class="footer__copy">&copy 2021 chanelhaseyo | All Rights Reserved | Privacy Policy</p>
         <div class="footer__socials">
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-instagram"></i></a>
-            <a href="#"><i class="fa fa-youtube-play"></i></a>
-            <a href="#"><i class="fa fa-tumblr"></i></a>
+            <a href="https://www.facebook.com/jonnellesolomon"><i class="fa fa-facebook"></i></a>
+            <a href="https://twitter.com/jonnellesolomon"><i class="fa fa-twitter"></i></a>
+            <a href="https://www.instagram.com/chanelhaseyo"><i class="fa fa-instagram"></i></a>
+            <a href="https://www.youtube.com/channel/UCFqtAh0pLqQ2II-l0k48EsA"><i class="fa fa-youtube-play"></i></a>
+            <a href="https://www.tumblr.com/blog/chanelhaseyo"><i class="fa fa-tumblr"></i></a>
         </div>
     </footer>
 
